--- a/static/css/create.css
+++ b/static/css/create.css
@@ -163,11 +163,12 @@ label {
     padding: 0;
     margin: 8px auto;
     font-size: 16px;
-    font-weight: var(--regular);
-    color: #484848;
+    font-weight: var(--semibold);
+    color: var(--off-black);
     text-align: left;
     -webkit-box-sizing: border-box;
-            box-sizing: border-box;
+    box-sizing: border-box;
+    text-align: center;
 }
 .radio-cont-2 {
     max-width: 340px;
