Update title in listing_create_form.html

--- a/listings/templates/listings/listing_create_form.html
+++ b/listings/templates/listings/listing_create_form.html
@@ -2,7 +2,7 @@
 {% load static %}
 {% block head %}
 <link rel="stylesheet" href="{% static 'css/create.css' %}"> </link>
-<title>Hello</title>
+<title>Create a new listing | NextBoat</title>
 {% endblock %}
 {% block content %}
 
