Update import base template URL in all listings template files

--- a/listings/templates/listings/listing_create_form.html
+++ b/listings/templates/listings/listing_create_form.html
@@ -1,4 +1,4 @@
-{% extends "listings/base.html" %}
+{% extends "base.html" %}
 {% load static %}
 {% block head %}
 <link rel="stylesheet" href="{% static 'css/create.css' %}"> </link>
