--- a/listings/templates/listings/my_listings.html
+++ b/listings/templates/listings/my_listings.html
@@ -1,4 +1,4 @@
-{% extends "listings/base.html" %}
+{% extends "base.html" %}
 {% load static %}
 {% block head %}
 <link rel="stylesheet" href="{% static 'css/my_listings.css' %}"> </link>
