Update title tags in index.html, listing_delete.html, Listing_details.html

--- a/listings/templates/listings/index.html
+++ b/listings/templates/listings/index.html
@@ -1,4 +1,7 @@
 {% extends 'base.html' %}
+{% block head %}
+<title>NextBoat - the best way to find your next boat | Buy & sell all kinds of boats</title>
+{% endblock %}
 {% block content %}
 Index Template
 
