--- a/listings/templates/listings/listing_delete.html
+++ b/listings/templates/listings/listing_delete.html
@@ -2,7 +2,7 @@
 {% load static %}
 {% block head %}
 <link rel="stylesheet" href="{% static 'css/delete_listing.css' %}"> </link>
-<title>My Listings - NextBoat</title>
+<title>Delete the listing for your {{ object.get_make_display }} {{ object.model }} - NextBoat</title>
 {% endblock %}
 {% block content %}
 <main>
