--- a/listings/templates/listings/listing_details.html
+++ b/listings/templates/listings/listing_details.html
@@ -4,6 +4,7 @@
 {% load static %}
 {% block head %}
 <link rel="stylesheet" href="{% static 'css/listing_details.css' %}"> </link>
+<title>{{ listing.get_make_display }} {{ listing.model }} {{ listing.category }} for sale | NextBoat - buy and sell boats online</title>
 {% endblock %}
 {% block content %}
 
