--- a/static/css/base.css
+++ b/static/css/base.css
@@ -9,6 +9,10 @@
     --medium-grey: #484848;
     --off-black: #333333;
     --dark-black: #222222;
+    --form-field-bg-hover: #d5d5d5;
+    --form-field-bg-inactive: #fbfbfb;
+    --form-field-border-inactive: #d9d9d9;
+    --accent-colour-dark: #20AFAF;
     /* Font weights */
     --regular: 400;
     --medium: 500;
