--- a/static/css/messages.css
+++ b/static/css/messages.css
@@ -38,7 +38,7 @@
     font-size: 16px;
     font-weight: var(--medium);
     line-height: 18px;
-    border-radius: 24px;
+    border-radius: 16px;
     padding: 16px;
     margin-bottom: 8px;
 }
@@ -125,4 +125,43 @@
     color: #484848;
     font-size: 20px;
     font-weight: var(--medium);
+}
+form {
+    margin-top: 16px;
+    width: 100%;
+}
+input[type=text] {
+    width: calc(100% - 60px);
+    font-size: 16px;
+    background-color: var(--form-field-bg-inactive);
+    border: 2px solid var(--form-field-border-inactive);
+    font-weight: var(--medium);
+    padding: 8px;
+    margin-right: 8px;
+    border-radius: 8px;
+    -webkit-box-sizing: border-box;
+    box-sizing: border-box;
+}
+button {
+    border-radius: 8px;
+    color: var(--white);
+    border: none;
+    cursor: pointer;
+    font-size: 16px;
+    margin: 0;
+    padding: 0px 8px;
+    height: 38px;
+    width: 44px;
+    background-color: var(--accent-colour);
+}
+#submit-icon {
+    height: 16px;
+    width: auto;
+    margin: 0 4px;
+}
+button:disabled {
+    background-color: #bebebe !important;
+    color: var(--medium-grey);
+    border: none;
+    cursor: not-allowed;
 }
