--- a/listings/templates/listings/listings.html
+++ b/listings/templates/listings/listings.html
@@ -10,7 +10,7 @@
 <div class="listing-grid">
     {% for listing in listings_list %}
     <div class="boat-listing-cont">
-        <a href="#">
+        <a href="{% url 'boat_listing_details' listing.pk %}">
             <div class="boat-listing-item">
                 <img class="listing-picture" alt="Picture of boat {{ listing.get_make_display }} {{ listing.model }}" src="{{ listing.featured_image.url }}">
                 <div class="listing-text-flex">
