--- a/static/css/listings.css
+++ b/static/css/listings.css
@@ -70,16 +70,16 @@
 .year-loc-flex {
     width: 100%;
     display: flex;
-    flex-direction: row;
-    flex-wrap: nowrap;
-    align-items: center;
+    flex-direction: column;
+    flex-wrap: wrap;
+    align-items: flex-start;
     margin-bottom: 8px;
+    justify-content: flex-start;
 }
 .year {
     width: 60px;
     margin-bottom: 8px;
     display: flex;
-    flex: row;
     flex-wrap: nowrap;
     align-items: center;
     justify-content: flex-start;
@@ -93,8 +93,7 @@
     margin-right: 4px;
 }
 .location {
-    width: calc(100% - 68px);
-    margin-left: 8px;
+    width: 100%;
     margin-bottom: 8px;
     display: flex;
     flex: row;
